--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>CodeWithLaynie</h1>
         <p>👩‍💻 Software Engineer | Coding Enthusiast</p>
         <div class="links">
-            <a href="https://yourportfolio.com" class="active">Portfolio</a>
+            <a href="https://lvtierne.github.io/Portfolio/" class="active">Portfolio</a>
             <a href="https://yourprojects.com">Latest Projects</a>
             <a href="https://yourblog.com">Blog</a>
             <a href="https://www.youtube.com/channel/your-channel" class="youtube">YouTube</a> 
