--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>👩‍💻 Software Engineer | Coding Enthusiast</p>
         <div class="links">
             <a href="https://lvtierne.github.io/Portfolio/" class="active">Portfolio</a>
-            <a href="https://yourprojects.com">Latest Projects</a>
+            <a href="https://https://github.com/lvtierne">Latest Projects</a>
             <a href="https://yourblog.com">Blog</a>
             <a href="https://www.youtube.com/channel/your-channel" class="youtube">YouTube</a> 
             <a href="https://www.linkedin.com/in/your-profile" class="linkedin">LinkedIn</a>
