--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://https://github.com/lvtierne">Latest Projects</a>
             <a href="https://yourblog.com">Blog</a>
             <a href="https://www.youtube.com/channel/your-channel" class="youtube">YouTube</a> 
-            <a href="https://www.linkedin.com/in/your-profile" class="linkedin">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/laynie-tierney-9b847a280/" class="linkedin">LinkedIn</a>
 
         </div>
         
